<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/dialog_confirm_face_background"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_add_face_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/preview"
            android:layout_width="214dp"
            android:layout_height="226dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/confirm_add_face_tips"
            android:textColor="@color/face_dialog_hint"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/input_face_id_tips"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/face_main_color"
            android:textColorHint="@color/face_dialog_hint"
            android:textSize="13sp"
            android:theme="@style/MyEditText" />

        <TextView
            android:id="@+id/liveness_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/face_main_color"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_confirm_face_retry_background"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:stateListAnimator="@null"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@color/face_main_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/share_face_feature"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_confirm_face_confirm_background"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:stateListAnimator="@null"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
